See if css stops chrome on mobile hiding and showing top bar, changing screen height.

--- a/css/iconic.css
+++ b/css/iconic.css
@@ -9,8 +9,8 @@
 }
 
 html, body, main {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	background: #1F1F1F;
 	padding: 0;
 	margin: 0;
