--- a/css/new.css
+++ b/css/new.css
@@ -8,12 +8,6 @@
 	color: white;
 }
 
-html, body, main {
-	width: 100%;
-	height: 100%;
-	background: #1F1F1F;
-}
-
 header {
   height: 200vh;
 }
